fix letter spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,7 +18,7 @@ a, a:visited, a:active, a:hover, h1 {
 
 p {
 	opacity: 1 !important;
-	
+
 	color: #1a1a1a !important;
 }
 
@@ -31,6 +31,7 @@ h1, .h1, h2, .h2, h3, .h3, label, legend {
   margin-top: 5px;
   margin-bottom: 40px;
 	line-height: 1em;
+	letter-spacing: normal !important;
 }
 
 
